data/all_generated_tests/raw_wast_tests/loop_StackCorruption_312.wast
;; - Test 3: Implement a loop with mixed `br_if` and `br` instructions that conditionally branch based on stack values. Ensure branches are triggered flippantly to test for stack misalignment. Check for stack overflows when branches are continuously taken.

(assert_invalid
  (module
    (func $test-loop-mixed-branches
      (i32.const 1) (loop $L (result i32) 
        (i32.const 0)
        (br_if $L)
        (i32.const 0) 
        (drop)
        (br $L) 
      )
    )
  )
  "invalid branch to loop"
)